# amethyst

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
crates/amethyst-core/: Cargo.toml
crates/amethyst-core/src/: engine.rs  lib.rs  prelude.rs
crates/amethyst-ecs/: Cargo.toml
crates/amethyst-ecs/src/: lib.rs
crates/amethyst-internal/: Cargo.toml
crates/amethyst-internal/src/: camera.rs  lib.rs
crates/amethyst-math/: Cargo.toml
crates/amethyst-math/src/: prelude.rs
crates/amethyst-render/: Cargo.toml
crates/amethyst-render/shaders/: fragment.glsl
crates/amethyst-render/src/: camera.rs  frame.rs  lib.rs  prelude.rs  vertex.rs
crates/amethyst-vulkan/: Cargo.toml
crates/amethyst-vulkan/src/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  format.rs  image.rs  lib.rs  pipeline.rs  prelude.rs  queue.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  sync.rs
crates/amethyst-vulkan/src/buffer/: allocator.rs  mod.rs  subbuffer.rs
crates/amethyst-vulkan/src/command/: mod.rs  pool.rs
crates/amethyst-vulkan/src/image/: mod.rs  sampler.rs  surface.rs  view.rs
crates/amethyst-window/: Cargo.toml
crates/amethyst-window/src/: event.rs  lib.rs
examples/: cube.rs  mipmap.rs  rectangle.rs  rotating-triangle.rs  textured-rectangle.rs  triangle.rs
examples/shaders/: rotating.frag  rotating.vert  texture.frag  texture.vert
src/: lib.rs  main.rs
